--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/mTvSource"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:textColor="@color/search_opaque"
+        android:textSize="36sp"/>
     <ProgressBar
         android:id="@+id/mPbLoading"
         android:layout_width="100dp"
